feat: Update mileage calculation and UI
- Change running average calculation to simple average
- Rename last mileage to current running mileage
- Add padding to all data table
- Update localization files

--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -15,7 +15,7 @@
   "paidAmount": "পরিশোধিত পরিমাণ (বিডিটি)",
   "save": "সংরক্ষণ করুন",
   "runningAverageMileage": "চলমান গড় মাইলেজ",
-  "lastTimeMileage": "শেষবারের মাইলেজ",
+  "lastTimeMileage": "বর্তমান চলমান মাইলেজ",
   "lastRefuelVolume": "শেষ রিফুয়েল ভলিউম",
   "exportToCSV": "সিএসভি-তে এক্সপোর্ট করুন",
   "folderPath": "ফোল্ডারের পথ",
