feat: Enhance data display and fix lint warnings
This commit introduces several improvements to the Fuel Tracker application, including enhanced data display on the dashboard and all data pages, and fixes for various lint warnings.

**Changes:**

-   **`lib/pages/dashboard_page.dart`**:
    -   The dashboard now displays more detailed information about the last refuel, including volume, total price, odometer reading, and fuel rate.
    -   Fixed an `invalid_use_of_private_member` lint warning by specifying the return type of the `createState` method.

-   **`lib/pages/all_data_page.dart`**:
    -   Added a new column to the data table to display the average mileage between refuels.
    -   Replaced the deprecated `MaterialStateProperty` with `WidgetStateProperty` to resolve lint warnings.

-   **`lib/pages/add_data_page.dart`**:
    -   The app now remembers the last used fuel price.
    -   The volume is now automatically calculated based on the paid amount and rate.

-   **`lib/services/storage_service.dart`**:
    -   Replaced `print` statements with `debugPrint` to prevent logging in production builds, addressing the `avoid_print` lint warning.

-   **`android/app/src/main/AndroidManifest.xml`**:
    -   Enabled the predictive back gesture for a smoother navigation experience on newer Android versions.

-   **Localization (`lib/l10n/`)**:
    -   Updated localization files (`.arb` and generated `.dart` files) with new strings to support the UI enhancements.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -43,5 +43,12 @@
   "dropbox": "Dropbox",
   "fileStorageOption": "File Storage Option",
   "actualBill": "Actual Bill",
-  "savings": "Savings/Loss"
+  "savings": "Savings/Loss",
+  "averageMileage": "Average Mileage",
+  "lastRefuelDetails": "Last Refuel Details",
+  "volume": "Volume:",
+  "totalPrice": "Total Price:",
+  "odometer": "Odometer:",
+  "fuelRate": "Fuel Rate:",
+  "summary": "Summary"
 }
