--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -10,38 +10,45 @@
   "dateAndTime": "তারিখ ও সময়",
   "odometerReading": "ওডোমিটার রিডিং (কিলোমিটার)",
   "fuelType": "জ্বালানির ধরণ",
-  "fuelPriceRate": "জ্বালানির দামের হার (বিডিটি)",
+  "fuelPriceRate": "জ্বালানির দামের হার (টাকা)",
   "totalVolume": "মোট ভলিউম (লিটার)",
-  "paidAmount": "পরিশোধিত পরিমাণ (বিডিটি)",
-  "save": "সংরক্ষণ করুন",
+  "paidAmount": "পরিশোধিত পরিমাণ (টাকা)",
+  "save": "সেভ করুন",
   "runningAverageMileage": "চলমান গড় মাইলেজ",
   "lastTimeMileage": "বর্তমান চলমান মাইলেজ",
   "lastRefuelVolume": "শেষ রিফুয়েল ভলিউম",
   "exportToCSV": "সিএসভি-তে এক্সপোর্ট করুন",
-  "folderPath": "ফোল্ডারের পথ",
-  "saveSettings": "সেটিংস সংরক্ষণ করুন",
-  "maximumTankCapacity": "সর্বোচ্চ ট্যাঙ্কের ক্ষমতা (লিটার)",
+  "folderPath": "ফোল্ডারের পাথ",
+  "saveSettings": "সেটিংস সেভ করুন",
+  "maximumTankCapacity": "ট্যাঙ্কের সর্বোচ্চ ধারন ক্ষমতা (লিটার)",
   "selectCSVFile": "সিএসভি ফাইল নির্বাচন করুন",
   "selectedFile": "নির্বাচিত ফাইল",
-  "noDataPreviewAvailable": "কোনও ডেটা প্রিভিউ উপলভ্য নয়",
+  "noDataPreviewAvailable": "কোনও ডেটা প্রিভিউ পাওয়া যায় নি",
   "importData": "ডেটা ইম্পোর্ট করুন",
   "dataImportedSuccessfully": "ডেটা সফলভাবে ইম্পোর্ট করা হয়েছে!",
-  "errorImportingData": "ডেটা ইম্পোর্ট করতে ত্রুটি: ",
-  "errorReadingCSVFile": "সিএসভি ফাইল পড়তে ত্রুটি: ",
+  "errorImportingData": "ডেটা ইম্পোর্ট করতে সমস্যা: ",
+  "errorReadingCSVFile": "সিএসভি ফাইল পড়তে সমস্যা: ",
   "csvFileEmptyOrIncorrectlyFormatted": "সিএসভি ফাইলটি খালি বা ভুলভাবে ফর্ম্যাট করা হয়েছে।",
   "dataExportedTo": "ডেটা এখানে এক্সপোর্ট করা হয়েছে ",
   "failedToExport": "এক্সপোর্ট করতে ব্যর্থ: ",
   "folderPathNotSetInSettings": "সেটিংস-এ ফোল্ডারের পথ সেট করা নেই।",
   "settingsSaved": "সেটিংস সংরক্ষিত হয়েছে।",
-  "enterOdometerReading": "ওডোমিটার রিডিং প্রবেশ করুন",
-  "enterFuelPriceRate": "জ্বালানির দামের হার প্রবেশ করুন",
-  "enterTotalVolume": "মোট ভলিউম প্রবেশ করুন",
-  "enterPaidAmount": "পরিশোধিত পরিমাণ প্রবেশ করুন",
-  "enterMaximumCapacity": "সর্বোচ্চ ক্ষমতা প্রবেশ করুন",
-  "local": "স্থানীয়",
+  "enterOdometerReading": "ওডোমিটার রিডিং টাইপ করুন",
+  "enterFuelPriceRate": "জ্বালানির দামের হার টাইপ করুন",
+  "enterTotalVolume": "মোট ভলিউম টাইপ করুন",
+  "enterPaidAmount": "পরিশোধিত পরিমাণ টাইপ করুন",
+  "enterMaximumCapacity": "সর্বোচ্চ ক্ষমতা টাইপ করুন",
+  "local": "লোকাল স্টোরেজ",
   "googleDrive": "Google Drive",
   "dropbox": "Dropbox",
   "fileStorageOption": "ফাইল স্টোরেজ অপশন",
   "actualBill": "বিল",
-  "savings": "সঞ্চয়"
+  "savings": "বেচেছে (টাকা)",
+  "averageMileage": "গড় মাইলেজ",
+  "lastRefuelDetails": "শেষ রিফুয়েলের বিবরণ",
+  "volume": "ভলিউম:",
+  "totalPrice": "মোট মূল্য:",
+  "odometer": "ওডোমিটার:",
+  "fuelRate": "জ্বালানির দাম:",
+  "summary": "সারসংক্ষেপ"
 }
