feat: Introduce multi-vehicle and multi-fuel support
This commit introduces a major feature enhancement, adding support for managing multiple vehicles and various fuel types.

- **Data Models:** New `Vehicle` and `FuelType` models have been created to store detailed information.
- **Database Schema:** The database has been updated to version 3 with new tables for `vehicles` and `fuel_types`. The `fuel_records` table is now linked to these new tables using foreign keys (`vehicleId`, `fuelTypeId`).
- **Services:** `VehicleService` and `FuelTypeService` have been added to manage vehicle and fuel type data. They include logic to populate the database with default vehicles and fuel types if none exist.
- **UI/UX Enhancements:**
    - The **Dashboard** and **All Data** pages now feature a dropdown to filter records by vehicle.
    - Mileage and cost-efficiency cards on the dashboard are now dynamically generated based on the selected vehicle's primary and secondary fuel types.
    - The **Add Data** page allows users to select a vehicle and then choose from its available fuel types.
    - **Import/Export** functionality has been updated to handle the new `vehicleId` and `fuelTypeId` fields. Export now offers separate options for refueling data, app settings, and vehicle information.
- **Localization:** New translations have been added for vehicle-related UI elements and export options.
- **Refactoring:**
    - `FuelRecord` model updated to use `vehicleId` and `fuelTypeId` instead of a string-based `fuelType`.
    - Removed the now-obsolete `defaultFuelPrices` logic from `AppSettings` and the settings page.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -50,5 +50,14 @@
   "totalPrice": "Total Price:",
   "odometer": "Odometer:",
   "fuelRate": "Fuel Rate:",
-  "summary": "Summary"
+  "summary": "Summary",
+  "costEfficiency": "Cost-Efficiency",
+  "costPerKm": "Cost per km",
+  "comingSoon": "Coming Soon",
+  "notAvailable": "N/A",
+  "vehicle": "Vehicle",
+  "exportRefuelingData": "Export Refueling Data",
+  "exportAppSettings": "Export App Settings",
+  "exportVehicleInformation": "Export Vehicle Information",
+  "selectDataToExport": "Select data to export:"
 }
