feat: Implement vehicle management and localization
This commit introduces a comprehensive vehicle management system and integrates internationalization (i18n) for English and Bengali languages.

Key changes include:

-   **Vehicle Management:**
    -   Added `ManageVehiclesPage` to list, edit, and set a default vehicle.
    -   Created `AddVehiclePage` for adding new or editing existing vehicles.
    -   The dashboard now shows a welcome screen if no vehicles are added, prompting the user to add one.
    -   Expanded the `VehicleType` enum to include more specific categories like `carOrSedan`, `scooterOrMoped`, `suv`, and `pickupOrTruck`.
    -   `VehicleService` now uses `shared_preferences` to manage the default vehicle, removing the auto-creation of a "Default Vehicle".

-   **Localization:**
    -   Integrated `flutter_intl` to support English (`en`) and Bengali (`bn`) languages.
    -   Added localization files (`.arb`) and generated message files.
    -   UI text across the app now uses localized strings.

-   **Settings Enhancements:**
    -   Users can now set default fuel prices for each fuel type in the settings, which are auto-filled on the "Add Fuel Data" page.

-   **Application Assets & Configuration:**
    -   Added an application icon (`fuelTracker.png`) and configured `flutter_launcher_icons` to generate platform-specific icons.
    -   Updated Android and iOS configurations to use the new icons.
    -   Enabled `flutter gen-l10n` in `pubspec.yaml`.

-   **CI/CD:**
    -   Improved the GitHub Actions workflow to dynamically name the release based on the date and run number.

--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -11,10 +11,10 @@
   "odometerReading": "ওডোমিটার রিডিং (কিলোমিটার)",
   "fuelType": "জ্বালানির ধরণ",
   "fuelPriceRate": "জ্বালানির দামের হার (টাকা)",
-  "totalVolume": "মোট ভলিউম (লিটার)",
+  "totalVolume": "মোট ভলিউм (লিটার)",
   "paidAmount": "পরিশোধিত পরিমাণ (টাকা)",
   "save": "সেভ করুন",
-  "runningAverageMileage": "চলমান গড় মাইলেজ",
+  "runningAverageMileage": "চলমান গড় মাইলেج",
   "lastTimeMileage": "বর্তমান চলমান মাইলেজ",
   "lastRefuelVolume": "শেষ রিফুয়েল ভলিউম",
   "exportToCSV": "সিএসভি-তে এক্সপোর্ট করুন",
@@ -37,18 +37,46 @@
   "enterFuelPriceRate": "জ্বালানির দামের হার টাইপ করুন",
   "enterTotalVolume": "মোট ভলিউম টাইপ করুন",
   "enterPaidAmount": "পরিশোধিত পরিমাণ টাইপ করুন",
-  "enterMaximumCapacity": "সর্বোচ্চ ক্ষমতা টাইপ করুন",
+  "enterMaximumCapacity": "সর্বোচ্চ ক্ষমতা টাইప్ করুন",
   "local": "লোকাল স্টোরেজ",
   "googleDrive": "Google Drive",
   "dropbox": "Dropbox",
   "fileStorageOption": "ফাইল স্টোরেজ অপশন",
   "actualBill": "বিল",
   "savings": "বেচেছে (টাকা)",
-  "averageMileage": "গড় মাইলেজ",
+  "averageMileage": "গড় মাইলেج",
   "lastRefuelDetails": "শেষ রিফুয়েলের বিবরণ",
   "volume": "ভলিউম:",
   "totalPrice": "মোট মূল্য:",
   "odometer": "ওডোমিটার:",
   "fuelRate": "জ্বালানির দাম:",
-  "summary": "সারসংক্ষেপ"
+  "summary": "সারসংক্ষেপ",
+  "costEfficiency": "খরচ-কার্যকারিতা",
+  "costPerKm": "প্রতি কিলোমিটারে খরচ",
+  "comingSoon": "শীঘ্রই আসছে",
+  "notAvailable": "প্রযোজ্য নয়",
+  "vehicle": "যানবাহন",
+  "exportRefuelingData": "রিফুয়েলিং ডেটা এক্সপোর্ট করুন",
+  "exportAppSettings": "অ্যাপ সেটিংস এক্সপোর্ট করুন",
+  "exportVehicleInformation": "গাড়ির তথ্য এক্সপোর্ট করুন",
+  "selectDataToExport": "এক্সপোর্ট করার জন্য ডেটা নির্বাচন করুন:",
+  "manageVehicles": "যানবাহন পরিচালনা",
+  "addVehicle": "যানবাহন যোগ করুন",
+  "vehicleName": "যানের নাম",
+  "vehicleType": "যানের প্রকার",
+  "primaryFuelType": "প্রাথমিক জ্বালানির প্রকার",
+  "primaryFuelCapacity": "প্রাথমিক জ্বালানির ধারণক্ষমতা",
+  "secondaryFuelType": "মাধ্যমিক জ্বালানির প্রকার",
+  "secondaryFuelCapacity": "মাধ্যমিক জ্বালানির ধারণক্ষমতা",
+  "carOrSedan": "কার/সেডান",
+  "motorcycle": "মোটরসাইকেল",
+  "scooterOrMoped": "স্কুটার/ভেসপা/মপেড",
+  "suv": "এসইউভি/জিপ গাড়ি",
+  "pickupOrTruck": "পিকাপ/ট্রাক",
+  "edit": "সম্পাদনা",
+  "setAsDefault": "ডিফল্ট হিসাবে সেট করুন",
+  "defaultVehicle": "ডিফল্ট যানবাহন",
+  "editVehicle": "যানবাহন সম্পাদনা",
+  "noVehiclesMessage": "স্বাগতম! শুরু করতে আপনার প্রথম যান যোগ করুন।",
+  "defaultFuelPrices": "ডিফল্ট জ্বালানির দাম"
 }
