--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -59,5 +59,24 @@
   "exportRefuelingData": "Export Refueling Data",
   "exportAppSettings": "Export App Settings",
   "exportVehicleInformation": "Export Vehicle Information",
-  "selectDataToExport": "Select data to export:"
+  "selectDataToExport": "Select data to export:",
+  "manageVehicles": "Manage Vehicles",
+  "addVehicle": "Add Vehicle",
+  "vehicleName": "Vehicle Name",
+  "vehicleType": "Vehicle Type",
+  "primaryFuelType": "Primary Fuel Type",
+  "primaryFuelCapacity": "Primary Fuel Capacity",
+  "secondaryFuelType": "Secondary Fuel Type",
+  "secondaryFuelCapacity": "Secondary Fuel Capacity",
+  "carOrSedan": "Car/Sedan",
+  "motorcycle": "Motorcycle",
+  "scooterOrMoped": "Scooter/Moped",
+  "suv": "SUV",
+  "pickupOrTruck": "Pick-up/Truck",
+  "edit": "Edit",
+  "setAsDefault": "Set as Default",
+  "defaultVehicle": "Default Vehicle",
+  "editVehicle": "Edit Vehicle",
+  "noVehiclesMessage": "Welcome! Add your first vehicle to get started.",
+  "defaultFuelPrices": "Default Fuel Prices"
 }
