feat: Add daily average stats and update docs
This commit introduces a "Daily Averages" card on the dashboard, displaying the daily average run (km/day) and daily average cost.

Key changes include:
- **Dashboard:**
  - Added new functions `calculateDailyAverageRun` and `calculateDailyAverageCost`.
  - Implemented a new card to display these daily average statistics.
- **Localization:**
  - Added new localization strings for "Daily Averages", "Daily Average Run", and "Daily Average Cost" in both English and Bengali.
  - Corrected minor typos in the Bengali localization file.
- **File Export:**
  - Changed the exported CSV filename prefix from `fuel_records` to `refuel_records`.
  - Updated the date format in the filename to `yyyyMMddTHHmm` for better sorting.
- **Documentation:**
  - Updated `README.md` to include a download link and list new features like vehicle management, default fuel prices, and manual theme switching.
  - Added "Cloud Data Backup Options" to the future development plan.

--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -11,7 +11,7 @@
   "odometerReading": "ওডোমিটার রিডিং (কিলোমিটার)",
   "fuelType": "জ্বালানির ধরণ",
   "fuelPriceRate": "জ্বালানির দামের হার (টাকা)",
-  "totalVolume": "মোট ভলিউм (লিটার)",
+  "totalVolume": "মোট ভলিউম (লিটার)",
   "paidAmount": "পরিশোধিত পরিমাণ (টাকা)",
   "save": "সেভ করুন",
   "runningAverageMileage": "চলমান গড়",
@@ -37,14 +37,14 @@
   "enterFuelPriceRate": "জ্বালানির দামের হার টাইপ করুন",
   "enterTotalVolume": "মোট ভলিউম টাইপ করুন",
   "enterPaidAmount": "পরিশোধিত পরিমাণ টাইপ করুন",
-  "enterMaximumCapacity": "সর্বোচ্চ ক্ষমতা টাইప్ করুন",
+  "enterMaximumCapacity": "সর্বোচ্চ ক্ষমতা টাইপ করুন",
   "local": "লোকাল স্টোরেজ",
   "googleDrive": "Google Drive",
   "dropbox": "Dropbox",
   "fileStorageOption": "ফাইল স্টোরেজ অপশন",
   "actualBill": "বিল",
   "savings": "বেচেছে (টাকা)",
-  "averageMileage": "গড় মাইলেج",
+  "averageMileage": "গড় মাইলেজ",
   "lastRefuelDetails": "শেষ রিফুয়েলের বিবরণ",
   "volume": "ভলিউম:",
   "totalPrice": "মোট মূল্য:",
@@ -85,5 +85,8 @@
   "cancel": "বাতিল",
   "ok": "ঠিক আছে",
   "welcomeToFuelTracker": "ফুয়েল ট্র্যাকারে স্বাগতম!",
-  "addFirstVehiclePrompt": "চলুন আপনার প্রথম যানটি যোগ করে শুরু করা যাক। এটি শুধুমাত্র একটি মুহূর্ত সময় নেবে!"
+  "addFirstVehiclePrompt": "চলুন আপনার প্রথম যানটি যোগ করে শুরু করা যাক। এটি শুধুমাত্র একটি মুহূর্ত সময় নেবে!",
+  "dailyAverages": "দৈনিক গড়",
+  "dailyAverageRun": "দৈনিক গড় রান",
+  "dailyAverageCost": "দৈনিক গড় খরচ"
 }
