feat(settings): Add language selector and improve UI
This commit introduces a language selection feature in the Settings page and refactors parts of its user interface for better usability.

Key changes include:

-   **Language Selection:** A new language dropdown has been added to the `SettingsPage`, allowing users to switch between supported locales.
-   **Localization:** Added the "Language" key and its translations in English (`en`) and Bengali (`bn`).
-   **UI Refactor (`SettingsPage`):**
    -   The layout for default fuel price input fields has been changed from a vertical list to a 2-column `GridView` for a more compact presentation.
    -   The language dropdown is now implemented within a `ListTile` for a more consistent look and feel with other settings.
    -   Fixed an issue in the backup storage dropdown where `initialValue` was used instead of `value`, which could prevent it from updating correctly.

--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -88,5 +88,6 @@
   "addFirstVehiclePrompt": "চলুন আপনার প্রথম যানটি যোগ করে শুরু করা যাক। এটি শুধুমাত্র একটি মুহূর্ত সময় নেবে!",
   "dailyAverages": "দৈনিক গড়",
   "dailyAverageRun": "দৈনিক গড় রান",
-  "dailyAverageCost": "দৈনিক গড় খরচ"
+  "dailyAverageCost": "দৈনিক গড় খরচ",
+  "language": "ভাষা"
 }
