--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,7 +6,7 @@
   "import": "Import",
   "export": "Export",
   "settings": "Settings",
-  "addFuelData": "Add Fuel Data",
+  "addFuelData": "Add ReFuel Data",
   "dateAndTime": "Date & Time",
   "odometerReading": "Odometer Reading (km)",
   "fuelType": "Fuel Type",
