refactor(l10n): Standardize localization files and update AllData page
Refactored the localization setup by renaming `intl_*.arb` files to `app_*.arb` for consistency and updated the `l10n.yaml` configuration accordingly.

On the `AllData` page:
- Removed the "Actual Bill" and "Savings" columns.
- Introduced a "Running Average" column to display the overall average mileage.
- Renamed "Average Mileage" to "Trip Mileage" for clarity.
- Implemented row highlighting to indicate significant deviations from the running average mileage.

Signed-off-by: Andalib Bin Haque <pollob666@gmail.com>

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,20 +1,27 @@
 {
   "@@locale": "en",
+  "fuelRecords": "Fuel Records",
+  "dateAndTime": "Date & Time",
+  "odometerReading": "Odometer Reading",
+  "fuelPriceRate": "Fuel Price/Rate",
+  "totalVolume": "Total Volume",
+  "paidAmount": "Paid Amount",
+  "averageMileage": "Average Mileage",
+  "noDataFound": "No data found. Please add some fuel records.",
+  "addRecord": "Add Record",
+  "allData": "All Data",
+  "settings": "Settings",
+  "notAvailable": "N/A",
+  "vehicle": "Vehicle",
+  "fuelType": "Fuel Type",
+  "runningAverage": "Running Average",
+  "runningAverageMileage": "Running Average Mileage",
   "appTitle": "Fuel Consumption Tracker",
   "dashboard": "Dashboard",
-  "allData": "All Data",
   "import": "Import",
   "export": "Export",
-  "settings": "Settings",
   "addFuelData": "Add ReFuel Data",
-  "dateAndTime": "Date & Time",
-  "odometerReading": "Odometer Reading (km)",
-  "fuelType": "Fuel Type",
-  "fuelPriceRate": "Fuel Price Rate (BDT)",
-  "totalVolume": "Total Volume (litres)",
-  "paidAmount": "Paid Amount (BDT)",
   "save": "Save",
-  "runningAverageMileage": "Running Average Mileage",
   "lastTimeMileage": "Current Running Mileage",
   "lastRefuelVolume": "Last Refuel Volume",
   "exportToCSV": "Export to CSV",
@@ -44,7 +51,6 @@
   "fileStorageOption": "File Storage Option",
   "actualBill": "Actual Bill",
   "savings": "Savings/Loss",
-  "averageMileage": "Average Mileage",
   "lastRefuelDetails": "Last Refuel Details",
   "volume": "Volume:",
   "totalPrice": "Total Price:",
@@ -54,8 +60,6 @@
   "costEfficiency": "Cost-Efficiency",
   "costPerKm": "Cost per km",
   "comingSoon": "Coming Soon",
-  "notAvailable": "N/A",
-  "vehicle": "Vehicle",
   "exportRefuelingData": "Export Refueling Data",
   "exportAppSettings": "Export App Settings",
   "exportVehicleInformation": "Export Vehicle Information",
