--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -1,20 +1,27 @@
 {
   "@@locale": "bn",
+  "fuelRecords": "জ্বালানির রেকর্ড",
+  "dateAndTime": "তারিখ ও সময়",
+  "odometerReading": "ওডোমিটার রিডিং",
+  "fuelPriceRate": "জ্বালানির মূল্য/দর",
+  "totalVolume": "মোট পরিমাণ",
+  "paidAmount": "প্রদত্ত পরিমাণ",
+  "averageMileage": "গড় মাইলেজ",
+  "noDataFound": "কোনো ডেটা পাওয়া যায়নি। অনুগ্রহ করে কিছু জ্বালানির রেকর্ড যোগ করুন।",
+  "addRecord": "রেকর্ড যোগ করুন",
+  "allData": "সমস্ত ডেটা",
+  "settings": "সেটিংস",
+  "notAvailable": "প্রযোজ্য নয়",
+  "vehicle": "যানবাহন",
+  "fuelType": "জ্বালানির ধরন",
+  "runningAverage": "চলমান গড়",
+  "runningAverageMileage": "চলমান গড় মাইলেজ",
   "appTitle": "জ্বালানি খরচ ট্র্যাকার",
   "dashboard": "ড্যাশবোর্ড",
-  "allData": "সমস্ত ডেটা",
   "import": "ইম্পোর্ট",
   "export": "এক্সপোর্ট",
-  "settings": "সেটিংস",
   "addFuelData": "জ্বালানি ডেটা যোগ করুন",
-  "dateAndTime": "তারিখ ও সময়",
-  "odometerReading": "ওডোমিটার রিডিং (কিলোমিটার)",
-  "fuelType": "জ্বালানির ধরণ",
-  "fuelPriceRate": "জ্বালানির দামের হার (টাকা)",
-  "totalVolume": "মোট ভলিউম (লিটার)",
-  "paidAmount": "পরিশোধিত পরিমাণ (টাকা)",
   "save": "সেভ করুন",
-  "runningAverageMileage": "চলমান গড়",
   "lastTimeMileage": "বর্তমান মাইলেজ",
   "lastRefuelVolume": "শেষ রিফুয়েল ভলিউম",
   "exportToCSV": "সিএসভি-তে এক্সপোর্ট করুন",
@@ -44,7 +51,6 @@
   "fileStorageOption": "ফাইল স্টোরেজ অপশন",
   "actualBill": "বিল",
   "savings": "বেচেছে (টাকা)",
-  "averageMileage": "গড় মাইলেজ",
   "lastRefuelDetails": "শেষ রিফুয়েলের বিবরণ",
   "volume": "ভলিউম:",
   "totalPrice": "মোট মূল্য:",
@@ -54,8 +60,6 @@
   "costEfficiency": "খরচ-কার্যকারিতা",
   "costPerKm": "প্রতি কিলোমিটারে খরচ",
   "comingSoon": "শীঘ্রই আসছে",
-  "notAvailable": "প্রযোজ্য নয়",
-  "vehicle": "যানবাহন",
   "exportRefuelingData": "রিফুয়েলিং ডেটা এক্সপোর্ট করুন",
   "exportAppSettings": "অ্যাপ সেটিংস এক্সপোর্ট করুন",
   "exportVehicleInformation": "গাড়ির তথ্য এক্সপোর্ট করুন",
